--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "license": "MIT",
     "keywords": [],
     "dependencies": {
+        "@radix-ui/react-avatar": "^1.1.1",
         "@radix-ui/react-checkbox": "^1.1.2",
+        "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-radio-group": "^1.2.1",
         "@radix-ui/react-select": "^2.1.2",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-tooltip": "^1.1.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "keycloakify": "^11.4.4",
