--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build": "vite build",
         "build-keycloak-theme": "npm run build && keycloakify build",
         "storybook": "storybook dev -p 6006",
         "format": "prettier . --write"
@@ -22,17 +22,22 @@
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-popover": "^1.1.2",
         "@radix-ui/react-radio-group": "^1.2.1",
+        "@radix-ui/react-scroll-area": "^1.2.1",
         "@radix-ui/react-select": "^2.1.2",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tooltip": "^1.1.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "1.0.0",
+        "input-otp": "^1.4.1",
         "keycloakify": "^11.4.4",
         "lucide-react": "^0.468.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-phone-number-input": "^3.4.10",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7"
     },
